Update README.md to include MAVEN_OPTS